# engine

./: .gitignore  .gitmodules  CMakeLists.txt
.cache/clangd/index/: AlphaBitmap.h.0663ACDB4CF70C7B.idx  BitScale.cpp.AE34C4A94215EDB2.idx  BitScale.h.FF9CF3C56041A43E.idx  BitUtility.h.D425518AF493A59E.idx  Bitmap.h.3853A1ADD5696BBE.idx  ColorRgba.h.B6BC52BF6FA4AF68.idx  Interval.h.AC4702EC79F28F86.idx  Math.hpp.42D84A659E862140.idx  MortonTable.cpp.24812871238F16FD.idx  MortonTable.h.731D00F24B1501F8.idx  Point2.h.CFC99DAD66CFB262.idx  ProcessCommon.hpp.93CBF99017A6FD34.idx  ProcessRGB.cpp.45D7D9D44D844A15.idx  ProcessRGB.hpp.B83F153B1AF5D0CD.idx  PvrTcDecoder.cpp.8C0A505CF4083223.idx  PvrTcDecoder.h.77270291BE406F57.idx  PvrTcEncoder.cpp.9865755FB110A597.idx  PvrTcEncoder.h.10118C19E0023B3D.idx  PvrTcPacket.cpp.891681EB97F06124.idx  PvrTcPacket.h.270EA7DD945116B3.idx  RgbBitmap.h.54195528A38BC519.idx  RgbaBitmap.h.772CC74AF2282E65.idx  Tables.cpp.1C1000581A47CD0C.idx  Tables.hpp.F59AFBF314902417.idx  Types.hpp.466C72129720DFB5.idx  Vector.hpp.0773C07810C27800.idx  allocator.cpp.785545204014531B.idx  allocator.h.250FB6D62ACD1C41.idx  allocator.h.3E7AE77A47A82B67.idx  allocator.inl.08D2D61EC857D89B.idx  alpha.cpp.8B8B7DFCE84EC3AD.idx  alpha.h.BB5D309C91E8C2FC.idx  array.h.8233A0466A44ADE8.idx  array.inl.BFC3682DEF6C6929.idx  astcenc.h.85ED462FF2F5CFCB.idx  astcenc_averages_and_directions.cpp.E75958FAB01590D7.idx  astcenc_block_sizes.cpp.BF55798B2C76C0B6.idx  astcenc_color_quantize.cpp.9FE1BEE7AC86EA88.idx  astcenc_color_unquantize.cpp.EAB73D7CC6A06369.idx  astcenc_compress_symbolic.cpp.8E6BBD0DC6A5DEEC.idx  (+327 more)
src/: main.cpp
src/components/: mesh_renderer.h  name.h  spinner.h
src/core/: handle.h  transform.h
src/editor/: editor_state.h  gizmo.h  hierarchy_panel.h  inspector_panel.h
src/io/: asset_path.h  cgltf_impl.cpp  gltf_importer.cpp  gltf_importer.h  mesh_importer.h
src/render/: asset_registry.h  imgui_bgfx.cpp  imgui_bgfx.h  imgui_impl_glfw.h  mesh.h  primitive_cube.h
